--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "oura-api-v2-client",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "api client for Oura API V2",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "exports": {
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js",
+    "node": "./dist/esm/index.mjs",
+    "default": "./dist/cjs/index.js"
+  },
   "scripts": {
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
-    "build": "npm-run-all clean tsc",
+    "build": "npm-run-all clean && npm run build:cjs && npm run build:esm",
+    "build:esm": "tsc --module es2015 --target es5 --outDir dist/esm",
+    "build:cjs": "tsc --module commonjs --target es5 --outDir dist/cjs",
     "start": "node .",
     "check-types": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.{js,ts,json}'",
