--- a/examples/package.json
+++ b/examples/package.json
@@ -2,7 +2,7 @@
   "name": "examples",
   "version": "1.0.0",
   "description": "",
-  "main": "getDailyActivity.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
