--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oura-api-v2-client",
-  "version": "0.1.3",
-  "description": "api client for Oura API V2",
+  "version": "0.1.4",
+  "description": "API client for Oura API V2",
   "main": "dist/cjs/index.js",
   "exports": {
     "import": "./dist/esm/index.js",
