--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "prettier", "prettier/@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
+  }
 }
