--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oura-api-v2-client",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "API client for Oura API V2",
   "main": "dist/cjs/index.js",
   "exports": {
@@ -13,7 +13,7 @@
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
-    "build": "npm-run-all clean && npm run build:cjs && npm run build:esm",
+    "build": "npm run lint:fix && npm-run-all clean && npm run build:cjs && npm run build:esm",
     "build:esm": "tsc --module es2015 --target es5 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es5 --outDir dist/cjs",
     "start": "node .",
