--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean": "rimraf dist/*",
     "tsc": "tsc",
     "build": "npm run lint:fix && npm-run-all clean && npm run build:cjs && npm run build:esm && bash bin/script.sh",
-    "build:esm": "tsc --module es2015 --target es5 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs --target es5 --outDir dist/cjs",
+    "build:esm": "tsc --module es2015 --outDir dist/esm",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "start": "node .",
     "check-types": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.{js,ts,json}'",
