--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build": "npm run lint:fix && npm-run-all clean && npm run build:cjs && npm run build:esm && bash bin/script.sh",
     "build:esm": "tsc --module es2015 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "build:dev": "npm run lint:fix && npm-run-all clean && npm run build:dev:cjs && npm run build:dev:esm && bash bin/script.sh && npm link",
+    "build:dev:esm": "tsc --module es2015 --sourceMap --outDir dist/esm",
+    "build:dev:cjs": "tsc --module commonjs --sourceMap --outDir dist/cjs",
     "start": "node .",
     "check-types": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.{js,ts,json}'",
