--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
   "name": "oura-api-v2-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "API client for Oura API V2",
   "main": "dist/cjs/index.js",
-  "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js",
-    "node": "./dist/esm/index.mjs",
-    "default": "./dist/cjs/index.js"
-  },
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
     "build": "npm run lint:fix && npm-run-all clean && npm run build:cjs && npm run build:esm && bash bin/script.sh",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:dev": "npm run lint:fix && npm-run-all clean && npm run build:dev:cjs && npm run build:dev:esm && bash bin/script.sh && npm link",
-    "build:dev:esm": "tsc --module es2015 --sourceMap --outDir dist/esm",
-    "build:dev:cjs": "tsc --module commonjs --sourceMap --outDir dist/cjs",
+    "build:dev:esm": "tsc -p tsconfig.esm.json --sourceMap",
+    "build:dev:cjs": "tsc -p tsconfig.cjs.json --sourceMap",
     "start": "node .",
     "check-types": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.{js,ts,json}'",
