--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,7 +6,11 @@ name: npm publish
 on:
   release:
     types: [created]
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      message:
+        required: true
+        default: "Write some messsage here"
 
 jobs:
   publish-npm:
