--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": "eslint --cache --fix",
-    "*.ts": "tsc --noEmit",
-    "*.{js,ts,json}": "prettier --write"
+    "src/**/*.{js,ts}": "eslint --cache --fix",
+    "src/**/*.ts": "bash -c 'tsc --noEmit'",
+    "src/**/*.{js,ts,json}": "prettier --write"
   },
   "dependencies": {
     "axios": "^0.26.1"
