--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "oura-api-v2-client",
   "version": "1.0.1",
   "description": "API client for Oura API V2",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "main": "dist/cjs/src/index.js",
+  "module": "dist/esm/src/index.js",
+  "types": "dist/esm/types/index.d.ts",
   "scripts": {
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist/*",
