--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "oura-api-v2-client",
   "version": "1.0.2",
   "description": "API client for Oura API V2",
-  "main": "dist/cjs/src/index.js",
-  "module": "dist/esm/src/index.js",
-  "types": "dist/esm/types/index.d.ts",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/oura-api-v2-client.esm.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "clean": "rimraf dist/*",
-    "tsc": "tsc",
-    "build": "npm run lint:fix && npm-run-all clean && npm run build:cjs && npm run build:esm && bash bin/script.sh",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:dev": "npm run lint:fix && npm-run-all clean && npm run build:dev:cjs && npm run build:dev:esm && bash bin/script.sh && npm link",
-    "build:dev:esm": "tsc -p tsconfig.esm.json --sourceMap",
-    "build:dev:cjs": "tsc -p tsconfig.cjs.json --sourceMap",
-    "start": "node .",
-    "check-types": "tsc --noEmit",
-    "format": "prettier --write 'src/**/*.{js,ts,json}'",
-    "eslint": "eslint src/**/*.ts",
-    "eslint:fix": "eslint src/**/*.ts --fix",
-    "lint": "npm-run-all eslint check-types",
-    "lint:fix": "npm-run-all eslint:fix check-types format",
-    "prepublish": "$(npm bin)/tsc"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "prebuild": "yarn lint",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "lint:fix": "tsdx lint --fix",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
   "keywords": ["oura", "oura ring", "oura api", "oura api v2"],
   "author": "Takahiro MITSUOKA",
@@ -34,32 +34,36 @@
     "type": "git",
     "url": "https://github.com/mitsuoka0423/oura-api-v2-client"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^12.12.54",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5",
-    "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+  "peerDependencies": {
+    "axios": "^0.26.1"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "tsdx lint"
     }
   },
-  "lint-staged": {
-    "src/**/*.{js,ts}": "eslint --cache --fix",
-    "src/**/*.ts": "bash -c 'tsc --noEmit'",
-    "src/**/*.{js,ts,json}": "prettier --write"
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
-  "dependencies": {
-    "axios": "^0.26.1"
+  "size-limit": [
+    {
+      "path": "dist/oura-api-v2-client.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/oura-api-v2-client.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^8.0.0",
+    "husky": "^8.0.1",
+    "size-limit": "^8.0.0",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
